--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -21,7 +21,7 @@
         },
         {
             "taskName": "build",
-            "args": ["run", "test"]
+            "args": ["run", "build"]
         }
     ]
 }
