--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "babel lib --out-dir build",
+    "build": "babel lib --out-dir build -w --source-maps",
     "test": "mocha"
   },
   "repository": {
