implement test routine for ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,17 @@ image: node:6
 services:
   - redis
 
-job1:
+variables:
+  - REDIS_HOST=redis
+
+build:
   stage: build
   script:
     - npm install
     - npm run build
+
+test:
+  stage: test
+  script:
+    - npm run lint
+    - npm run test
