--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "babel lib --out-dir build",
     "build:watch": "babel lib --out-dir build -w --source-maps",
+    "lint": "eslint lib",
     "test": "mocha"
   },
   "repository": {
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/MrTraan/RNMQ#readme",
   "devDependencies": {
     "babel-cli": "^6.16.0",
+    "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
