--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^3.7.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
     "mocha": "^3.1.0"
   },
   "dependencies": {
