--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,15 @@ services:
 variables:
   REDIS_HOST: redis
 
+build:
+  stage: build
+  artifacts:
+    paths:
+      - ./node_modules
+      - ./build
+  script:
+    - npm install
+    - npm run build
 test:
   stage: test
   script:
